--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,8 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential cmake pkg-config ninja-build libboost-program-options-dev libboost-filesystem-dev libboost-crc-dev
+          # Установите единый пакет заголовков вместо отдельных компонентов
+          sudo apt-get install -y build-essential cmake pkg-config ninja-build libboost-dev
 
       - name: Install dependencies (Windows)
         if: runner.os == 'Windows'
